カレントユーザーを取得するエンドポイントを追加
