# app/docs/swagger.json
@@ -316,7 +316,42 @@
                 }
             }
         },
-        "/user": {
+        "/users": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "全てのユーザーのID・名前をリストで取得する",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "全ユーザーを取得する",
+                "responses": {
+                    "200": {
+                        "description": "登録されたユーザーの情報",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.SuccessResponse-array_user_GetUsersResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "不正なリクエスト",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.FailureResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "内部サーバーエラー",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.FailureResponse"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "新しいユーザーを登録する",
                 "consumes": [
@@ -360,7 +395,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/users/me": {
             "delete": {
                 "security": [
                     {
@@ -443,7 +480,7 @@
                 }
             }
         },
-        "/user/tasks": {
+        "/users/me/tasks": {
             "get": {
                 "security": [
                     {
@@ -463,43 +500,6 @@
                         "description": "タスクの情報",
                         "schema": {
                             "$ref": "#/definitions/presenter.SuccessResponse-array_task_GetTaskResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "不正なリクエスト",
-                        "schema": {
-                            "$ref": "#/definitions/presenter.FailureResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "内部サーバーエラー",
-                        "schema": {
-                            "$ref": "#/definitions/presenter.FailureResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/users": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "全てのユーザーのID・名前をリストで取得する",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "User"
-                ],
-                "summary": "全ユーザーを取得する",
-                "responses": {
-                    "200": {
-                        "description": "登録されたユーザーの情報",
-                        "schema": {
-                            "$ref": "#/definitions/presenter.SuccessResponse-array_user_GetUsersResponse"
                         }
                     },
                     "400": {
@@ -537,7 +537,7 @@
         "auth.LoginResponse": {
             "type": "object",
             "properties": {
-                "signed_token": {
+                "jwt_token": {
                     "type": "string"
                 }
             }
